--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "node-js",
   "version": "1.0.0",
   "description": "oli wol",
-  "main": "app.js",
+  "main": "dist/app.js",
   "scripts": {
     "build": "npx tsc",
-    "start": "node src/app.js",
-    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q app.js\""
+    "start": "node dist/app.js",
+    "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/app.js\""
   },
-  "author": "",
+  "author": "Arielhenriquez",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
