--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Arielhenriquez",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
+    "joi": "^17.13.1",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.32.1",
@@ -19,6 +21,7 @@
     "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.7",
     "@types/swagger-ui-express": "^4.1.3",
