--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "joi": "^17.13.1",
+    "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.32.1",
@@ -24,6 +28,8 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.7",
+    "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^4.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "concurrently": "^8.2.0",
     "nodemon": "^3.0.1",
